kubernetes/Cluster-Int-Temp/deployments/proxy/truenas-int/deluge.sops.yaml
apiVersion: v1
kind: Service
metadata:
    name: deluge
    namespace: proxy
spec:
    type: ExternalName
    selector:
        app: traefik
    ports:
        - name: ENC[AES256_GCM,data:KqHICsqP,iv:xk+faeBYCn1looTxsxRNDrLLp/b1KAaaoxClKJiQdVY=,tag:lamqxr2FE6Hu2393k9izbQ==,type:str]
          port: ENC[AES256_GCM,data:RDz84A==,iv:8XsdSMAXTA1YHw0Yvph1TqeRI2OXBEj3DMgdCwqeqrA=,tag:m6sIBr54ygEJIUBdRALLZg==,type:int]
          targetPort: ENC[AES256_GCM,data:ffsQOw==,iv:U7jT4uHhFai/0FNE56GUcwBSwmYewK7tF3dNxunX2Jg=,tag:WN0fls9Y+v7U8R4HaeCzrA==,type:int]
    externalName: ENC[AES256_GCM,data:0ddyl4odfPx7HQ==,iv:XmPI9F4kW5WxSF50husuruaZS5JYk0KgC6IkPlWhbEo=,tag:jbyOJgMymV3rwIlEy40u3g==,type:str]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1k8rczdg4c0u0a2z57zy334al5n0s3vk6mrqm6njnt3j8hr39sq4qxcrlcs
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBVT1g1NlBORW1ta0Rjdnoz
[...]
            nUoDydv/yRhY2pea0vz6JR9IABgejfs1Gg6TVPlbJzrPH8S0YuNS4g==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-06-15T12:47:20Z"
    mac: ENC[AES256_GCM,data:PptV6i8hxTI9WqT/bBz7v6X3G+4TPg8fnrj+JgtfdoUM18GUKpTIJQTMSXLwpXDjE+7aG365s1Np8McdWJGx8DMsRfQxEKt636mXP1kyRoiZw0+v/fJoxWLXmyhKKYyTtuyq/k5KeAeIKUH5g/gXPCHn115+xXk7AW6gzC3QfLE=,iv:Q+bKlJkT/o1wGIjNcQXAzXCPPJwt8/DvfFv/91LW7PA=,tag:DjQsS7LPYE69KaeNmtKIFQ==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|data|match|secretName|services|ports|externalName|loadBalancerIP|bootstrap|k8s.v1.cni.cncf.io/networks|dnsZones|email|commonName|dnsNames|config)$
    version: 3.8.1
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    name: deluge
    namespace: proxy
    annotations:
        kubernetes.io/ingress.class: traefik-external
spec:
    entryPoints:
        - websecure
    routes:
        - match: ENC[AES256_GCM,data:npOdpCH+6SgPJ1vpg73RHCAFBTCrFk4sMO4=,iv:kHLvUEvCjHI6jzFo1ZMlf8iSqEYrhxCYM/4ISaDIuIw=,tag:mBBIAM2BA45bZgAA73uQIA==,type:str]
          kind: Rule
          services:
            - name: ENC[AES256_GCM,data:c4NIcnB8,iv:1b42rPUMqCz9B+KhoLksYkYzbniYC28wvfbf3IklkNY=,tag:5MnpuWNUtxAFKvnVLvBfBw==,type:str]
              port: ENC[AES256_GCM,data:w2+tvg==,iv:SbXuWxf3oakoWbauTnqx9KXD3ILYaHmQOp5vO8pAz0M=,tag:KMxH2PJj+YHwXx/q6gieHA==,type:int]
    tls:
        secretName: ENC[AES256_GCM,data:LhWljg876NzP6jJHRB0=,iv:+FJXCQLExi3ybUA6VAjXwumQdGQ3+uQ+H9N4MFgCUmw=,tag:AsQ+svyIqXjKErG+uMfN5w==,type:str]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1k8rczdg4c0u0a2z57zy334al5n0s3vk6mrqm6njnt3j8hr39sq4qxcrlcs
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBVT1g1NlBORW1ta0Rjdnoz
[...]
            nUoDydv/yRhY2pea0vz6JR9IABgejfs1Gg6TVPlbJzrPH8S0YuNS4g==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-06-15T12:47:20Z"
    mac: ENC[AES256_GCM,data:PptV6i8hxTI9WqT/bBz7v6X3G+4TPg8fnrj+JgtfdoUM18GUKpTIJQTMSXLwpXDjE+7aG365s1Np8McdWJGx8DMsRfQxEKt636mXP1kyRoiZw0+v/fJoxWLXmyhKKYyTtuyq/k5KeAeIKUH5g/gXPCHn115+xXk7AW6gzC3QfLE=,iv:Q+bKlJkT/o1wGIjNcQXAzXCPPJwt8/DvfFv/91LW7PA=,tag:DjQsS7LPYE69KaeNmtKIFQ==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|data|match|secretName|services|ports|externalName|loadBalancerIP|bootstrap|k8s.v1.cni.cncf.io/networks|dnsZones|email|commonName|dnsNames|config)$
    version: 3.8.1
