kubernetes/Cluster-Int-Temp/deployments/proxy/truenas-int/immich.sops.yaml
apiVersion: v1
kind: Service
metadata:
    name: immich
    namespace: proxy
spec:
    type: ExternalName
    selector:
        app: traefik
    ports:
        - name: ENC[AES256_GCM,data:YwZSbOo0,iv:6QhLBLIgw23XTqN8jJgWW7FUsQtky9l7jQBFsI0iQVE=,tag:X4Q4G87LSCuts20u5riopA==,type:str]
          port: ENC[AES256_GCM,data:wf+N+XI=,iv:b1ZtmW42veOhn6E9r73SxJBONi0ARqrb4lK97hj2FmI=,tag:olayS4YP4imHoKmNscKR6w==,type:int]
          targetPort: ENC[AES256_GCM,data:jC4cb+Q=,iv:0aCR+VMw/UM0dMSETE8gqhtx2XpCewYbr/pUJk/HqAs=,tag:fpKrA9RPJSIEryXcmDVonA==,type:int]
    externalName: ENC[AES256_GCM,data:qlJ/SEO1M3W781Q=,iv:qqyTgRJs727hAuMzUeQVL/2XvP5sV8jrrC1QZmO2nVI=,tag:Led39tlsS2n/pLCuYLGTGA==,type:str]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1k8rczdg4c0u0a2z57zy334al5n0s3vk6mrqm6njnt3j8hr39sq4qxcrlcs
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBjYVhFakE4cFZ0RXowMmtn
[...]
            Dl2MoEdlRiyQQ29FTf596Z3dIXXxGfRVqtyeyJlJl3tJfuVykWt2eQ==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-06-15T12:46:50Z"
    mac: ENC[AES256_GCM,data:be0tmiB7xVn+jx39C8LMp2Sqskzji3gs7KUvgWPh3LkotXRrB9qP7jlYwC0dj4ynSnr+4qVE7oAEhXf2mGMmR3RhiQ0LfPRywGa+IAs6k5dShZVWE6oqmdF5kmYGandbNhfS6tK7Ho1vziTXod1yhG4tod0kZ49mXYQFB03QDzE=,iv:aTBAgaKO/uClfkyaFw0IdnZF1HKrl/g366YUA0sYkas=,tag:vPBJebXU4vkIgeZFS/3f+A==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|data|match|secretName|services|ports|externalName|loadBalancerIP|bootstrap|k8s.v1.cni.cncf.io/networks|dnsZones|email|commonName|dnsNames|config)$
    version: 3.8.1
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    name: immich
    namespace: proxy
    annotations:
        kubernetes.io/ingress.class: traefik-external
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:5yq9+ucYPuazyrQBtQgynK6xZw/YwH9QOdg=,iv:C6e/XBvjHFXPxMV2YUkswFCsIRZ33XYuzsAo3n5EkQU=,tag:964tx5Z8diYowN8aZK9Z+w==,type:str]
          services:
            - name: ENC[AES256_GCM,data:+9p2zVbn,iv:1frO2tILI51/0orzb+9WcgKqU8UalNK2DVP4bnBHYO8=,tag:MJX2CpsfS1cnvnZnKfjvXQ==,type:str]
              port: ENC[AES256_GCM,data:3XRXdNo=,iv:9QVYVi6q/e9DI26+YeNXus1FYo/tdprNeEMEnqxO2e4=,tag:ueXdnWUV+eT8UNcZJJ7HLw==,type:int]
        - kind: Rule
          match: ENC[AES256_GCM,data:d5ZSCdf/qRX5dkWPwQT/l1MV7VpGnQ==,iv:I0u8MxJSgZs/NW8fhqVT7dLtaLZxmmAs16Ry5A2iriA=,tag:iJh0qMuxdAirZkLfkGNivw==,type:str]
          services:
            - name: ENC[AES256_GCM,data:rWKa+j9N,iv:ne1EuE3wFi7r6ESeDbdH4RpFK2o8nD54xDik8f3nWpA=,tag:2H+WMMib1JfscEGiJGfbIA==,type:str]
              port: ENC[AES256_GCM,data:Q4jbUHo=,iv:vkPSpul7NIubDAzwO2XnPVzYuxt/vPFaEHXct+QMhSM=,tag:DJK8lQ2TrTs5VSzvHxuuVw==,type:int]
    tls:
        secretName: ENC[AES256_GCM,data:i6s76CKTKk4URQlrC6w=,iv:EC6chDc4xVWRQuGIOSAEwsOOAvyyz48aTzZDcXWNp1w=,tag:RhiY3UNgL6SZKR/zP9mWHA==,type:str]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1k8rczdg4c0u0a2z57zy334al5n0s3vk6mrqm6njnt3j8hr39sq4qxcrlcs
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBjYVhFakE4cFZ0RXowMmtn
[...]
            Dl2MoEdlRiyQQ29FTf596Z3dIXXxGfRVqtyeyJlJl3tJfuVykWt2eQ==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-06-15T12:46:50Z"
    mac: ENC[AES256_GCM,data:be0tmiB7xVn+jx39C8LMp2Sqskzji3gs7KUvgWPh3LkotXRrB9qP7jlYwC0dj4ynSnr+4qVE7oAEhXf2mGMmR3RhiQ0LfPRywGa+IAs6k5dShZVWE6oqmdF5kmYGandbNhfS6tK7Ho1vziTXod1yhG4tod0kZ49mXYQFB03QDzE=,iv:aTBAgaKO/uClfkyaFw0IdnZF1HKrl/g366YUA0sYkas=,tag:vPBJebXU4vkIgeZFS/3f+A==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|data|match|secretName|services|ports|externalName|loadBalancerIP|bootstrap|k8s.v1.cni.cncf.io/networks|dnsZones|email|commonName|dnsNames|config)$
    version: 3.8.1
