kubernetes/Cluster-Int-Temp/deployments/proxy/truenas-int/jellyfin.sops.yaml
apiVersion: v1
kind: Service
metadata:
    name: jellyfin
    namespace: proxy
spec:
    type: ExternalName
    selector:
        app: traefik
    ports:
        - name: ENC[AES256_GCM,data:8PszfnfLuMQ=,iv:2q3MHVBpfFCT5Ot51SwiLMqT4ku8Ee5L+mmyJ22kTNU=,tag:sKTlT6QIjmkKDCcHKYP7OQ==,type:str]
          port: ENC[AES256_GCM,data:f9SLbg==,iv:f6mQ/x1tMckNKqvGWIb+bDUSutCeaoBNALdJX3rD9qo=,tag:JmGxx1HBBjDCHx2GY+hhBg==,type:int]
          targetPort: ENC[AES256_GCM,data:yTe6ew==,iv:rU+GHmPC/S1W6cwvU5cZ5LL7oWfpolnHIxsnHnBAJYQ=,tag:Z44G+vZjKs/98qESYRkmxA==,type:int]
    externalName: ENC[AES256_GCM,data:8rvXK+ZN4XatPVQ=,iv:UK036pPCXlGDIyENDB3LwmI75z9knF6jalRPlI8L4CU=,tag:A1cjVwgP1BujuzBYATZjxw==,type:str]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1k8rczdg4c0u0a2z57zy334al5n0s3vk6mrqm6njnt3j8hr39sq4qxcrlcs
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBkcUxtSVhJVCsyODBYV3g4
[...]
            0dmBVukbCXarTy30HNVVPqGx7hn54zofx7dQPXDJKUDU18Tqexv/eQ==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-06-15T12:47:10Z"
    mac: ENC[AES256_GCM,data:bWs9nNDJml0LPGkbiW50ek1SvPj0f5UAt4Brc+U63uYyp9l0H2YIhmcSHja1MEamKo1gGFGY6AfR0a7YQP0U9pwdDHb8i/qXHTtA76rh7K/f91GIR5YIHGzc80LPkkn2yAu6VmjzyJZj5p0tpd4wyulOPFBaUQb2U7pM1pxJjr4=,iv:tfz6uO4uP6xO9jHf516FUZ4LWYco6oSJEfQbeux/zn4=,tag:DKfnAdFUG0ZcYAZmwoWUxQ==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|data|match|secretName|services|ports|externalName|loadBalancerIP|bootstrap|k8s.v1.cni.cncf.io/networks|dnsZones|email|commonName|dnsNames|config)$
    version: 3.8.1
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    name: jellyfin
    namespace: proxy
    annotations:
        kubernetes.io/ingress.class: traefik-external
spec:
    entryPoints:
        - websecure
    routes:
        - match: ENC[AES256_GCM,data:9LdsB23XnC+8Tc2tRpwtMmBFgf22OJQL,iv:XGp1nCmEKxN8deSaSSz8wPjhKse96oMJiAs3I/g/AAU=,tag:OpJzjT3rRSQ7cw8Xk8Fsrw==,type:str]
          kind: Rule
          services:
            - name: ENC[AES256_GCM,data:yhl9hglzfRI=,iv:isPKA+7wtmWhvCDaZP+WV7lwg5go9aoqa92Pkbw4SSE=,tag:y7Bk/RYKJ1/+jvpH0YVHpQ==,type:str]
              port: ENC[AES256_GCM,data:0Vfd3w==,iv:RXhDmFvKoMSvIIF5xLa7fDOSGEdFPOlzbaim/MyxKm0=,tag:paSSZWjWBM8KwjJiwRPZhw==,type:int]
    tls:
        secretName: ENC[AES256_GCM,data:CO6mvJIWc+PZ6QjA6i0=,iv:gBf0w4uxS72rzQh2oyumkELr6LcecDybn+0GaeUVosY=,tag:0rylHGGKYsp90J4714cndQ==,type:str]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1k8rczdg4c0u0a2z57zy334al5n0s3vk6mrqm6njnt3j8hr39sq4qxcrlcs
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBkcUxtSVhJVCsyODBYV3g4
[...]
            0dmBVukbCXarTy30HNVVPqGx7hn54zofx7dQPXDJKUDU18Tqexv/eQ==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-06-15T12:47:10Z"
    mac: ENC[AES256_GCM,data:bWs9nNDJml0LPGkbiW50ek1SvPj0f5UAt4Brc+U63uYyp9l0H2YIhmcSHja1MEamKo1gGFGY6AfR0a7YQP0U9pwdDHb8i/qXHTtA76rh7K/f91GIR5YIHGzc80LPkkn2yAu6VmjzyJZj5p0tpd4wyulOPFBaUQb2U7pM1pxJjr4=,iv:tfz6uO4uP6xO9jHf516FUZ4LWYco6oSJEfQbeux/zn4=,tag:DKfnAdFUG0ZcYAZmwoWUxQ==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|data|match|secretName|services|ports|externalName|loadBalancerIP|bootstrap|k8s.v1.cni.cncf.io/networks|dnsZones|email|commonName|dnsNames|config)$
    version: 3.8.1
