kubernetes/Cluster-Int-Temp/deployments/proxy/truenas-int/minio.sops.yaml
apiVersion: v1
kind: Service
metadata:
    name: minio
    namespace: proxy
spec:
    type: ExternalName
    selector:
        app: traefik
    ports:
        - name: ENC[AES256_GCM,data:zQu0PcY=,iv:ykXhOjAfth/ORsQMqyYxn7k/xG3SMThVsUHHEX4xr1w=,tag:BF9aAy2Bqc5wKRe7N+1x1g==,type:str]
          port: ENC[AES256_GCM,data:KYqC6w==,iv:7Sppoa5GB/5NvunVOA4tsAPgLO+ZC2GyCE8msEa8Xro=,tag:sMwwcDoFEbbUrQatN2Josg==,type:int]
          targetPort: ENC[AES256_GCM,data:c9HsDw==,iv:/NcOuN/nLmB/Sp0fhpH5fzkPtxsYGTpFD4u6Xo+FjU4=,tag:8wdtDctLNb7JZrOZTceixw==,type:int]
        - name: ENC[AES256_GCM,data:2r6IfPqpoXI=,iv:nE1HvIePegENWQ5xeb2Lq/eDiJ/rA0FMBCxkAVcsdJo=,tag:d7KzNkExwSAuuNpL5I2w6Q==,type:str]
          port: ENC[AES256_GCM,data:KeJ89g==,iv:n93xId1ORE8MrZu5CByDsi0hldl8Ov5qlRDNIzXOsiU=,tag:ASsNUFHvV2dCB6P0Ob7Wlw==,type:int]
          targetPort: ENC[AES256_GCM,data:11JY9A==,iv:zYJpIZVU5/uEViN76Y4ImlF4lmOoTvhXBOJBj49kTmg=,tag:P8EOFc4DO8/PqW8/ZNBuQg==,type:int]
    externalName: ENC[AES256_GCM,data:c89fMcnYqRwmkAo=,iv:iGi/Xy9VJm6X7+k6QSKU8fTECqLtK7G4BmocJZJo2Qo=,tag:qN2aQ9jYyRmQShgFUhw+gA==,type:str]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1k8rczdg4c0u0a2z57zy334al5n0s3vk6mrqm6njnt3j8hr39sq4qxcrlcs
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBhQXhqa2FiWlQwTit1V0FF
[...]
            XSeH5/ZI/QAc6KTqQRea4QMl8+NiM4TB7sBySvdSBwrmykJr7Uk+Rw==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-06-15T12:43:13Z"
    mac: ENC[AES256_GCM,data:FAH7p3pPWwsnVJU5ftG4Hafwtcs7Xq3LP2U8JORHvmCWMIU5qP1XrcRYr8twX4oi8k9FRrDNZVPrOSQ9o/FNMSQjXUfedpR2jx1EcFBICIa+sypnW8LYxfDYnlARLR3XJFF0j2lawhLnby7Ydx/VRET3LDJGbTXNijPqnm6dqDA=,iv:aTq/iDm49u8bl6F853OOhHyksvE/2wXWUbKnuHhEcmk=,tag:HQoC9Y2tNeLNsscq8p7m8A==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|data|match|secretName|services|ports|externalName|loadBalancerIP|bootstrap|k8s.v1.cni.cncf.io/networks|dnsZones|email|commonName|dnsNames|config)$
    version: 3.8.1
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
    name: minio
    namespace: proxy
    annotations:
        kubernetes.io/ingress.class: traefik-external
spec:
    entryPoints:
        - websecure
    routes:
        - match: ENC[AES256_GCM,data:7yA4q0swMINC9s87milHR6mtQ8Iz,iv:XZe/70MZxJBtkqCfgeY1ysjYamMNvICkSSGECP/TVgo=,tag:3bExmNB9OaAyE293W1IBew==,type:str]
          kind: Rule
          services:
            - name: ENC[AES256_GCM,data:qS7/9hc=,iv:91gXJ7PeSc9qd77q7lQg4T8IAJadXYANSew15i2GNOw=,tag:Q8mns9/2vNAh86/7bp3ZSg==,type:str]
              port: ENC[AES256_GCM,data:t5xHkQ==,iv:X0pYZpApIsiipT5/44T+LkSWX8kwSiMJtf//DdtMlUE=,tag:h0aewhmHVraOWK4QLz3TAQ==,type:int]
        - match: ENC[AES256_GCM,data:M5syBCOt+y7+UZ1N8FGRU3MK,iv:5QgCQ8yCQPE42fjHxMO+vOzmfT9bKvyykzpoxt5St8s=,tag:8EgOUkjKi6x+rWYR9vSU4Q==,type:str]
          kind: Rule
          services:
            - name: ENC[AES256_GCM,data:UsyXiEO/WN4=,iv:MhsKuhiXiJYZ0d5v3TAVbD19GzyetvoegIy1SQljTzE=,tag:iLQMJF/0Cp3triuQq7HnwQ==,type:str]
              port: ENC[AES256_GCM,data:FPAf7Q==,iv:9sjF5auaBwfUfUZA+u4I0Z3HFXaBtG0GUJi75PGdb7I=,tag:J+GruIeBjFMwz5RUY+JY4g==,type:int]
    tls:
        secretName: ENC[AES256_GCM,data:AZ2wKsO88616P2/1JqY=,iv:RruiIzhK436yNHEI/tfXh+qO2Te/UWoeZqri+QqXBrA=,tag:f+H9mbAyAPbCr4K6PiUszA==,type:str]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1k8rczdg4c0u0a2z57zy334al5n0s3vk6mrqm6njnt3j8hr39sq4qxcrlcs
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBhQXhqa2FiWlQwTit1V0FF
[...]
            XSeH5/ZI/QAc6KTqQRea4QMl8+NiM4TB7sBySvdSBwrmykJr7Uk+Rw==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-06-15T12:43:13Z"
    mac: ENC[AES256_GCM,data:FAH7p3pPWwsnVJU5ftG4Hafwtcs7Xq3LP2U8JORHvmCWMIU5qP1XrcRYr8twX4oi8k9FRrDNZVPrOSQ9o/FNMSQjXUfedpR2jx1EcFBICIa+sypnW8LYxfDYnlARLR3XJFF0j2lawhLnby7Ydx/VRET3LDJGbTXNijPqnm6dqDA=,iv:aTq/iDm49u8bl6F853OOhHyksvE/2wXWUbKnuHhEcmk=,tag:HQoC9Y2tNeLNsscq8p7m8A==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|data|match|secretName|services|ports|externalName|loadBalancerIP|bootstrap|k8s.v1.cni.cncf.io/networks|dnsZones|email|commonName|dnsNames|config)$
    version: 3.8.1
